--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "express-session": "^1.17.3",
+    "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
     "nodemon": "^2.0.15"
